# deja

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.orchestrator  Dockerfile.replay-agent
config/dashboard/: development.toml
crates/deja/: Cargo.toml
crates/deja-compactor/: Cargo.toml
crates/deja-compactor/src/: lib.rs
crates/deja-context/src/: lib.rs
crates/deja-core/src/: lib.rs  serde_lenient.rs
crates/deja-derive/src/: instrument.rs  lib.rs  recordable.rs
crates/deja-kernel/: Cargo.toml
crates/deja-kernel/src/: lib.rs  main.rs
crates/deja-orchestrator/: Cargo.toml
crates/deja-orchestrator/src/: codebundle.rs  lib.rs  main.rs
crates/deja-orchestrator/src/api/: runs.rs
crates/deja-orchestrator/src/divergence/: ledger.rs  mod.rs
crates/deja-orchestrator/src/executor/: config.rs  env.rs  k8s.rs  launch.rs  mod.rs  patch.rs  reconcile.rs
crates/deja-orchestrator/src/lifecycle/: ecr.rs  mod.rs  sandbox.rs  store_ctx.rs  store_exec.rs
crates/deja-orchestrator/src/lookup/: mod.rs
crates/deja-orchestrator/src/s3/: mod.rs
crates/deja-replay-agent/: Cargo.toml
crates/deja-replay-agent/src/: lib.rs  main.rs  report.rs  seeding.rs
crates/deja-replay-core/: Cargo.toml
crates/deja-replay-core/src/: config.rs  ingest.rs  layout.rs  lib.rs  lookup.rs
crates/deja-runtime/: Cargo.toml
crates/deja-runtime/src/: correlation_layer.rs  graph.rs  lib.rs  replay.rs  writer.rs
crates/deja-runtime/tests/: execution_graph_layer.rs  recordable_integration.rs  replay_integration.rs  runtime_disabled_suppresses_env.rs
crates/deja-store/: Cargo.toml
crates/deja-store/migrations/: 0005_seed_certificate_artifact.sql  0006_diff_report_artifact.sql  0006_record_graph_artifact.sql
crates/deja-store/src/: lib.rs
crates/deja-tui/: Cargo.toml
crates/deja-tui/src/: lib.rs  main.rs
crates/deja-tui/tests/: load_summary.rs
crates/deja/src/: lib.rs
crates/deja/tests/: boundary_inactive.rs  boundary_macro.rs  fail_stop.rs  graceful_miss.rs  re_exports.rs  result_codec.rs  v2_regression.rs
demo/: Dockerfile.hyperswitch-semantic  Dockerfile.ucs-server  RUNBOOK-morning.md  dashboard.env.example  docker-compose.dashboard.yml  docker-compose.orchestrator.yml  lib.sh  migration-runner.sh  run-deja-demo.sh  run-deja-matrix.sh  run-deja-parallel-versions.sh  run-deja-parallel.sh  run-self-check.sh  superposition_seed.toml  test_visualize_replay.py  visualize-replay.py  workload-sandbox.sh  workload.sh
demo/cross-version/: README.md  transitive-chain.patch
demo/overlays/hyperswitch/: docker-compose.deja.yml
docs/: DEJA_ARCHITECTURE.md  DEJA_RECORDING_ARCHITECTURE.md  LOGICAL_CONTEXT_ADDRESSING.md  PHASE1_WEB_MATRIX_PLAN.md  PR_BODY.md  PR_FINALIZATION.md  REPLAY_PLATFORM_DESIGN.md
docs/design/: HANDOFF-commit-series-omp.md  HANDOFF-confirm-9of9.md  candidate-migration-resolution.md  clean-dsl-closeout-review.md  completeness-critique.md  confirm-write-correlation-bleed.md  dashboard-ux.md  declarative-boundary-model.md  deja-settings.md  detached-boundaries-replay-join.md  effect-algebra.md  execute-substitute-declaration.md  genericity-and-real-seeding.md  grpc-egress-boundary.md  incluster-deployment-plan.md  ingress-declarative-extraction-map.md  packaging.md  partial-function-replay.md  phase-b-db-dispatch-scope.md  replay-orchestrator-delivery-plan.md  replay-orchestrator-k8s-executor.md  replay-pipeline.md  replay-pod-boot-contract.md  replay-runtime-resolution.md  s3-store.md  tracing-substrate.md  vendor-thin-pr-checklist.md
docs/research/: keploy-vs-deja.md
docs/superpowers/plans/: 2026-07-08-deja-replay-core.md  2026-07-10-file-based-lookup-replay.md  2026-07-14-typed-ingest-graph-recording.md  2026-07-15-dashboard-diff-graph.md
docs/superpowers/specs/: 2026-07-08-sandbox-replay-design.md  2026-07-10-file-based-lookup-replay-design.md  2026-07-14-typed-ingest-graph-recording-design.md  2026-07-15-dashboard-diff-graph-design.md
ops/orchestrator/: Dockerfile  Dockerfile.dockerignore  README.md
scripts/: ci-local.sh  export-public.sh  sandbox-create.sh  sandbox-destroy.sh
web/: tsconfig.tsbuildinfo  vite.config.ts
web/src/: main.tsx  styles.css
web/src/components/: DiffView.tsx  GraphView.tsx
web/src/lib/: api.ts  graphalign.ts
web/src/pages/: NewRunPage.tsx  RunDetailPage.tsx  RunsPage.tsx  ScorecardPage.tsx
