[package]
name = "deja-orchestrator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Orchestrator service for the Deja replay test harness: run lifecycle, recording store, lookup-table rendering, post-hoc divergence detection."

[dependencies]
deja = { path = "../deja", default-features = false }
# Wire types shared with the recording streams (`ExecutionGraphNode` rides the
# tagged one-stream artifacts next to the boundary events).
deja-core = { path = "../deja-core" }
# Depended on for the shared wire types (`HttpDiff`, `JsonFieldDiff`) and the
# `diff_json` helper the divergence detector reuses. The kernel lib is
# dependency-light (deja + serde) and does not depend back on this crate, so
# there is no cycle and no heavyweight transitive cost.
deja-kernel = { path = "../deja-kernel" }
deja-compactor = { path = "../deja-compactor" }
deja-store = { path = "../deja-store" }
sha2 = "0.10"
hex = "0.4"
rust-embed = "8"
# Pure-Rust tar extraction for the runner's `stage-codebundle` step (the
# migrations initContainer unpacks the candidate's CodeBundle tar). Self-
# contained so the runner does not depend on a `tar` binary being in the image.
tar = "0.4"
# gunzip the source repo tarball (git-host codeload) when the control plane
# produces a candidate's migration bundle straight from its ref — streamed, so
# only the migrations/ subtree is held, not the whole repo.
flate2 = "1"
# Blocking HTTP for StoreCtx::Http — the in-Job runner reports progress from a
# plain thread; a sync client avoids dragging a second runtime into the pod.
# Also the executor's k8s API transport (raw REST against the in-cluster
# apiserver); the CA trust root is loaded from the pod's mounted SA cert, which
# needs rustls directly (versions pinned to ureq 2.12's own rustls 0.23).
ureq = { version = "2", features = ["json"] }
rustls = "0.23"
rustls-pemfile = "2"
mime_guess = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time"] }
tokio-stream = "0.1"
async-stream = "0.3"

[dev-dependencies]
tempfile = "3"
deja-context = { path = "../deja-context" }
tower = { version = "0.5", features = ["util"] }

[[bin]]
name = "deja-orchestrator"
path = "src/main.rs"

[[bin]]
name = "deja-runner"
path = "src/bin/deja-runner.rs"

[lints]
workspace = true
