[package]
name = "deja-replay-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Shared foundation for the Deja sandbox replay platform: TOML configuration, S3 key layout, recording ingest, lookup rendering and per-correlation filtering."

[dependencies]
deja = { path = "../deja", default-features = false }
deja-compactor = { path = "../deja-compactor" }
flate2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
toml = "0.8"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
